package AlanTuring.Main;

import AlanTuring.Programs.Menu;

public class Main {
    public static void main(String[] args) {
        Menu menu = new Menu();
        menu.mostrarMenu();
    }
}
