package AlanTuring.Reverser;

public class ReverserModel {
    public String simulateCountUp(){    //Loop infinito
        return "Counting up...";
    }

    public String simulateCountDown(){  //Simula un loop regresivo que terminara al llegar a 0.
        return "Counting down...";
    }

    public String simulateReverser(){ //Simula la funcion del reverser(Hacer lo contrario de lo que se le pide)
        return "Reversing...";
    }
}
